--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "vue": "^3.3.11"
   },
   "devDependencies": {
+    "@iconoir/vue": "^7.3.0",
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "iconoir": "^7.3.0",
     "prettier": "^3.0.3",
+    "sass": "^1.70.0",
     "vite": "^5.0.10"
   }
 }
