--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vue3-carousel": "^0.3.1"
   },
   "devDependencies": {
     "@iconoir/vue": "^7.3.0",
